tests/macros/password/page_size.rs
fn main() {
    inquisition::questions![Password { page_size: todo!() }];
}
